

-----------------------------------------------------------------------
Version 3.2.6   09/xx/2009   (svn revision xxx)
-----------------------------------------------------------------------

* The SQL based search.aspx page wasn't working when the Lucene full
text search was disabled.

* Fixed bug where task's times were switched from PM to AM.  Thanks to
Philip Parmenter for the fix.

alter table bug_subscriptions drop column bs_id
-----------------------------------------------------------------------
Version 3.2.5   08/29/2009   (svn revision 370)
-----------------------------------------------------------------------

* Fixed bug where nvarchar and nchar custom fields were allowing text
to be entered with more characters than could fit in the db field.

* If you are using the "news" link, enabled by setting 
"EnableWhatsNewPage" to "1" in Web.config, then this release should be
an improvement for you.   Now, if you keep the web page up, you won't 
loose news items even if you restart the IIS server.   Also, you
control the number of news items via the new "WhatsNewMaxItemsCount"
setting in Web.config.   Performance probably wasn't an issue before,
but it's even less likely to be an issue now.

As before, news items are listed regardless of project and org
permissions.

-----------------------------------------------------------------------
Version 3.2.4   08/16/2009   (svn revision 367)
-----------------------------------------------------------------------

* send_email.aspx with CKEditor was broken.  This release fixes it by
restoring the first line as:
<%@ Page language="C#" validateRequest="false" %>

* Added setting to Web.config "StripDisplayNameFromEmailAddress" to
work around a problem that some users are having when email addresses
are in the format 
Corey Trager <ctrager@yahoo.com>
instead of
ctrager@yahoo.com
I can't reproduce the problem myself. see also bug 2815733, "When 
sending mail to btnet, the mail address isn't correct"