@@ -740,7 +740,7 @@ Don't call us, we'll call you."/>
 			I think, the only reason to turn it off is if you have some technical problem 
 			with it.
 		-->
-		<add key="EnableLucene" value="0" /> 
+		<add key="EnableLucene" value="1" /> 
 		<add key="LuceneIndexFolder" value="App_Data\lucene_index" />
 
 		<!--
